<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    android:id="@+id/layout_game"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="350dp"
    android:layout_height= "700dp"
    android:orientation="vertical"
    android:background="@color/color_fondo"
    android:padding="10dp"
    android:gravity="center">

    <TextView
        android:id="@+id/seacaboTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/seacaboTxt"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textSize="@dimen/sizeTitle"
        android:textColor="@color/color_botones"
        android:layout_marginBottom="15dp"
        />

    <TextView
        android:id="@+id/hasMatadoTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hasMatadoTxt"
        android:textStyle="bold"
        android:textSize="18sp"
        android:layout_marginBottom="10dp"
        android:textAlignment="center"
        />

    <TextView
        android:id="@+id/numeroTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/numeroTxt"
        android:textAlignment="center"
        android:layout_marginBottom="10dp"
        android:textSize="18sp"
        android:textColor="@color/color_botones"
        />
    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/lottieMovimiento"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="@dimen/mg_tb"
        android:layout_marginBottom="@dimen/mg_tb"
        android:layout_marginEnd="8dp"
        android:textAlignment="center"
        app:lottie_autoPlay="true"
        app:lottie_fileName="finjuego.json"
        app:lottie_imageAssetsFolder="assets"
        app:lottie_loop="true"/>
        <Button
            android:id="@+id/jugarDeNuevo"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/jugarDeNuevo"
            android:layout_marginTop="15dp"
            android:textSize="@dimen/btnFontSize"
            app:backgroundTint ="@null"
            android:layout_gravity="center"
            android:background="@drawable/boton_personalizado"/>

        <Button
            android:id="@+id/irMenu"
            android:layout_width="300dp"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:text="@string/irMenu"
            android:layout_marginTop="15dp"
            android:textSize="@dimen/btnFontSize"
            app:backgroundTint ="@null"
            android:background="@drawable/boton_personalizado"/>

        <Button
            android:id="@+id/puntajes"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/puntajes"
            android:layout_marginTop="15dp"
            android:textSize="@dimen/btnFontSize"
            android:layout_gravity="center"
            app:backgroundTint ="@null"
            android:background="@drawable/boton_personalizado"/>

</androidx.appcompat.widget.LinearLayoutCompat>