<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Registro"
    android:padding="10dp"
    android:background="@color/color_fondo">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="10dp"
            android:gravity="center">

            <TextView
                android:id="@+id/txtTituloRegistro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txtTitleRegistro"
                android:textSize="@dimen/sizeTitle"
                android:textStyle="bold"
                android:textColor="@color/color_botones"
                android:layout_marginBottom="0dp"
                android:textAlignment="center"/>

            <ImageView
                android:id="@+id/imageView2"
                android:layout_marginTop="5dp"
                android:layout_width="150dp"
                android:layout_height="150dp"
                app:srcCompat="@drawable/corazon_herido" />
        </LinearLayout>



        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/mg_tb">

            <EditText
                android:id="@+id/txtCorreo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:background="@color/white"
                android:hint="@string/txtEmail"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/mg_tb">

            <EditText
                android:id="@+id/txtPassword"
                android:background="@color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/txtPassword"/>
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/mg_tb">

            <EditText
                android:id="@+id/txtNombre"
                android:background="@color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/txtNombre"/>
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/txtFecha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="@dimen/mg_tb"
            android:textAlignment="center"
            android:textSize="18dp"
            android:textStyle="bold"
            android:text="@string/txtFecha"
            />

        <Button
            android:layout_marginTop="20dp"
            android:id="@+id/btnRegistrar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnRegistrar"
            android:textSize="18dp"
            android:background="@drawable/boton_personalizado"
            app:backgroundTint ="@null"/>
    </LinearLayout>

</RelativeLayout>