<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".Login">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_marginBottom="20dp">

            <TextView
                android:id="@+id/txtTituloLogin"
                android:layout_width="match_parent"
                android:text="@string/txtTitleLogin"
                android:textSize="25dp"
                android:textStyle="bold"
                android:textAlignment="center"
                android:layout_marginBottom="12dp"
                android:layout_height="wrap_content"/>

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="100dp"
                android:layout_height="100dp"
                app:srcCompat="@drawable/corazon_herido" />
        </LinearLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp">

            <EditText
                android:layout_width="match_parent"
                android:background="@color/white"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:hint="@string/txtCorreoLogin"
                android:id="@+id/emailLogin"/>
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            app:passwordToggleEnabled="true">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:background="@color/white"
                android:hint="@string/txtPassLogin"
                android:id="@+id/passLogin"/>
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnIngresarLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txtBtnLogin"
            android:layout_marginTop="15dp"
            android:textSize="18dp"
            android:background="@drawable/boton_personalizado"
            app:backgroundTint ="@null"/>
    </LinearLayout>
</RelativeLayout>