<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Menu"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="22dp">
            <TextView
                android:id="@+id/txtTituloMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textSize="@dimen/sizeTitle"
                android:textStyle="bold"
                android:textColor="@color/color_botones"
                android:text="@string/txtTitleMenu"/>

            <TextView
                android:id="@+id/txtZombies"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textSize="22dp"
                android:layout_marginBottom="@dimen/mg_tb"
                android:textStyle="bold"
                android:text="3"/>

            <ImageView
                android:id="@+id/imageView4"
                android:layout_gravity="center"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_marginBottom="@dimen/mg_tb"
                app:srcCompat="@drawable/corazon_herido" />
            <TextView
                android:id="@+id/txtUidMenu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:visibility="invisible"/>
            <TextView
                android:id="@+id/txtCorreoMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textSize="18dp"
                android:layout_marginBottom="@dimen/mg_tb"
                android:text="palyer@gmail.co,"/>
            <TextView
                android:id="@+id/txtNombreMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textSize="18dp"
                android:textStyle="bold"
                android:text="Player 1"/>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:id="@+id/txtSubtituloBotones"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textAlignment="center"
                android:textSize="@dimen/sizeTitle"
                android:text="@string/txtSubTitleMenu"
                android:layout_marginBottom="10dp"/>


            <Button
                android:id="@+id/btnJugar"
                android:background="@drawable/boton_personalizado"
                app:backgroundTint ="@null"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btnJugarMenu"
                android:textSize="18dp"
                android:layout_marginBottom="@dimen/mg_tb"

                />
            <Button
                android:id="@+id/btnPuntaciones"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btnPuntuMenu"
                android:background="@drawable/boton_personalizado"
                app:backgroundTint ="@null"
                android:textSize="18dp"
                android:layout_marginBottom="@dimen/mg_tb"/>

            <Button
                android:id="@+id/btnHacerca"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btnAcercaMenu"
                android:background="@drawable/boton_personalizado"
                app:backgroundTint ="@null"
                android:textSize="18dp"
                android:layout_marginBottom="@dimen/mg_tb"/>

            <Button
                android:id="@+id/btnCerrarSesion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btnSalirMenu"
                android:textSize="18dp"
                android:background="@drawable/boton_personalizado"
                app:backgroundTint ="@null"/>


        </LinearLayout>
    </LinearLayout>


</ScrollView>